# molly

./: Cargo.toml  README.md
benches/: write_bench.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/molly/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: verification.py
examples/: compare.rs
src/: lib.rs  main.rs  reader.rs  writer.rs
tests/: compare.rs  selections.rs  steps.rs  write.rs
tests/common/: mod.rs
