[package]
name = "molly"
version = "0.5.0"
edition = "2021"
authors = ["Marieke Westendorp <ma3ke.cyber@gmail.com>"]
repository = "https://git.sr.ht/~ma3ke/molly"
exclude = ["tests/trajectories"]
keywords = ["molecular-dynamics", "gromacs", "xtc"]
license = "MIT"
categories = ["science", "parser-implementations"]
description = "A fast reader for the xtc file format"
rust-version = "1.74.1"

[lib]
name = "molly"
path = "src/lib.rs"

[[bin]]
name = "molly"
path = "src/main.rs"

[dependencies]
glam = "0.25.0"
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
chemfiles = "0.10.41"
xdrfile = "0.3.0"
bencher = "0.1.5"
tempfile = "3"

[profile.release]
lto = true

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "write_bench"
harness = false
