[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "molly"
version = "0.5.1"
authors = [
	{ name="Marieke Westendorp", email="ma3ke.cyber@gmail.com" },
]
description = "Python bindings for molly, a fast xtc reader and writer"
readme = "README.md"
dependencies = [
	"numpy",
]

[tool.setuptools.packages]
find = { where = ["python"] }

[[tool.setuptools-rust.ext-modules]]
target = "molly._molly"
path = "Cargo.toml"
binding = "PyO3"
